@@ -14,7 +14,6 @@ import org.bukkit.event.EventHandler;
 import org.bukkit.event.Listener;
 import org.bukkit.event.inventory.InventoryClickEvent;
 import org.bukkit.event.inventory.InventoryCloseEvent;
-import org.bukkit.event.inventory.InventoryMoveItemEvent;
 import org.bukkit.event.player.PlayerInteractEntityEvent;
 import org.bukkit.inventory.Inventory;
 import org.bukkit.inventory.ItemStack;
@@ -29,7 +28,13 @@ import world.arainu.core.metaverseplugin.iphone.Bank;
 import world.arainu.core.metaverseplugin.store.BankStore;
 import world.arainu.core.metaverseplugin.utils.sqlUtil;
 
-import java.util.*;
+import java.util.ArrayList;
+import java.util.Arrays;
+import java.util.Collections;
+import java.util.HashMap;
+import java.util.List;
+import java.util.Map;
+import java.util.Objects;
 import java.util.stream.Collectors;
 
 public class VillagerListener implements Listener {
@@ -161,54 +166,51 @@ public class VillagerListener implements Listener {
                 }
             }
         } else {
-            int total = 0;
-            final int required;
-            if(guiData.isPurchase) {
-                final HashMap<Integer, ? extends ItemStack> item_list = inv.all(item.getType());
-                for (Map.Entry<Integer, ? extends ItemStack> i : item_list.entrySet()) {
-                    if (i.getKey() != 2) {
-                        total += i.getValue().getAmount();
+            Bukkit.getScheduler().runTaskLater(MetaversePlugin.getInstance(),() -> {
+                int total = 0;
+                final int required;
+                if (guiData.isPurchase) {
+                    final HashMap<Integer, ? extends ItemStack> item_list = inv.all(item.getType());
+                    for (Map.Entry<Integer, ? extends ItemStack> i : item_list.entrySet()) {
+                        if (i.getKey() != 2) {
+                            total += i.getValue().getAmount();
+                        }
                     }
-                }
-                required = item.getAmount();
-            } else {
-                final List<ItemStack> money_list = new ArrayList<>(inv.all(Material.EMERALD).values());
-                for (ItemStack i : money_list) {
-                    final PersistentDataContainer persistentDataContainer = i.getItemMeta().getPersistentDataContainer();
-                    if (persistentDataContainer.has(BankStore.getKey(), PersistentDataType.INTEGER)) {
-                        total += persistentDataContainer.get(BankStore.getKey(), PersistentDataType.INTEGER) * i.getAmount();
+                    required = item.getAmount();
+                } else {
+                    final List<ItemStack> money_list = new ArrayList<>(inv.all(Material.EMERALD).values());
+                    for (ItemStack i : money_list) {
+                        final PersistentDataContainer persistentDataContainer = i.getItemMeta().getPersistentDataContainer();
+                        if (persistentDataContainer.has(BankStore.getKey(), PersistentDataType.INTEGER)) {
+                            total += persistentDataContainer.get(BankStore.getKey(), PersistentDataType.INTEGER) * i.getAmount();
+                        }
                     }
+                    required = guiData.price * Objects.requireNonNull(inv.getItem(2)).getAmount();
                 }
-                required = guiData.price * Objects.requireNonNull(inv.getItem(2)).getAmount();
-            }
 
-            ItemStack priceItem = Objects.requireNonNull(inv.getItem(6));
-            ItemMeta itemMeta = priceItem.getItemMeta();
-            if(required > total){
-                // TODO: 1tick遅らせる
-                if(guiData.isPurchase) {
-                    itemMeta.lore(Arrays.asList(
-                            Component.text("クリックして買取").color(NamedTextColor.GRAY),
-                            Component.text(required-total+"個不足しています").color(NamedTextColor.RED)
-                    ));
+                ItemStack priceItem = Objects.requireNonNull(inv.getItem(6));
+                ItemMeta itemMeta = priceItem.getItemMeta();
+                if (required > total) {
+                    if (guiData.isPurchase) {
+                        itemMeta.lore(Arrays.asList(
+                                Component.text("クリックして買取").color(NamedTextColor.GRAY),
+                                Component.text(required - total + "個不足しています").color(NamedTextColor.RED)
+                        ));
+                    } else {
+                        itemMeta.lore(Arrays.asList(
+                                Component.text("クリックして購入").color(NamedTextColor.GRAY),
+                                Component.text(MetaversePlugin.getEcon().format(required - total) + "不足しています").color(NamedTextColor.RED)
+                        ));
+                    }
                 } else {
-                    itemMeta.lore(Arrays.asList(
-                            Component.text("クリックして購入").color(NamedTextColor.GRAY),
-                            Component.text(MetaversePlugin.getEcon().format(required-total)+"不足しています").color(NamedTextColor.RED)
-                    ));
+                    if (guiData.isPurchase) {
+                        itemMeta.lore(List.of(Component.text("クリックして買取").color(NamedTextColor.GREEN)));
+                    } else {
+                        itemMeta.lore(List.of(Component.text("クリックして購入").color(NamedTextColor.GREEN)));
+                    }
                 }
-            } else {
-                if(guiData.isPurchase) {
-                    itemMeta.lore(Arrays.asList(
-                            Component.text("クリックして買取").color(NamedTextColor.GREEN)
-                    ));
-                } else {
-                    itemMeta.lore(Arrays.asList(
-                            Component.text("クリックして購入").color(NamedTextColor.GREEN)
-                    ));
-                }
-            }
-            priceItem.setItemMeta(itemMeta);
+                priceItem.setItemMeta(itemMeta);
+            },1);
         }
     }
 
